First commit for v3.1.2 update.