@@ -1,7 +1,7 @@
 @echo off
 
 REM  
-REM Copyright (C) 2016-2018 phantombot.tv
+REM Copyright (C) 2016-2019 phantombot.tv
 REM  
 REM This program is free software: you can redistribute it and/or modify
 REM it under the terms of the GNU General Public License as published by
@@ -18,15 +18,7 @@ REM along with this program.  If not, see <http://www.gnu.org/licenses/>.
 REM
 
 setlocal enableextensions enabledelayedexpansion
-set first=1
-for /f "delims=" %%a in ("%comspec%") do set "compath=%%~DPa"
-PATH %PATH%;%compath%;%JAVA_HOME%\bin\
-WHERE java >nul 2>nul
-IF %ERRORLEVEL% NEQ 0 (
-    echo You must have Java installed, please install it from: https://java.com/download
-    pause
-    exit
-)
-java -Dinteractive -Xms1m -Dfile.encoding=UTF-8 -jar PhantomBotDE.jar %1
+cd %~dp0
+".\java-runtime\bin\java" --add-opens java.base/java.lang=ALL-UNNAMED -Djava.security.policy=config/security -Dinteractive -Xms1m -Dfile.encoding=UTF-8 -jar "PhantomBot.jar" %1
 endlocal
 pause
